added tests, review module, auth module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "noFallthroughCasesInSwitch": false,
     "skipDefaultLibCheck": true,
     "strictPropertyInitialization": false
-  }
+  },
+  "exclude": ["test"]
 }
